[gd_scene load_steps=8 format=3 uid="uid://cdglacqwvw0ji"]

[ext_resource type="Texture2D" uid="uid://6bt2233hldeg" path="res://pictures/beallitasokhatter.png" id="1_357nx"]
[ext_resource type="AudioStream" uid="uid://by2l0nx8uf6c3" path="res://zenék/loop.mp3" id="1_gj2jl"]
[ext_resource type="Texture2D" uid="uid://cw8oryigrssbi" path="res://pictures/vissza1.png" id="4_0ouk1"]
[ext_resource type="Texture2D" uid="uid://104t868s8kmg" path="res://pictures/vissza2.png" id="5_5eqrc"]
[ext_resource type="Script" path="res://scenes/beallitas.gd" id="5_sor5i"]
[ext_resource type="AudioStream" uid="uid://c83i1jqk88q4f" path="res://zenék/buttonpress.mp3" id="6_caugx"]
[ext_resource type="AudioStream" uid="uid://1v5x41gphjy3" path="res://zenék/kurzor.mp3" id="7_2jqnw"]

[node name="Beállítások" type="Node2D"]

[node name="háttérzene" type="AudioStreamPlayer2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(1.82567, 1.296)
stream = ExtResource("1_gj2jl")
autoplay = true
parameters/looping = true

[node name="Beallitasokhatter" type="Sprite2D" parent="."]
position = Vector2(0, 0.4)
scale = Vector2(0.600284, 0.599971)
texture = ExtResource("1_357nx")
offset = Vector2(959.1, 539.352)

[node name="Hangok" type="TextureButton" parent="."]
offset_left = 564.0
offset_top = 224.0
offset_right = 604.0
offset_bottom = 264.0
script = ExtResource("5_sor5i")

[node name="Nyelv" type="TextureButton" parent="."]
offset_left = 580.0
offset_top = 306.0
offset_right = 620.0
offset_bottom = 346.0
script = ExtResource("5_sor5i")

[node name="Stáblista" type="TextureButton" parent="."]
offset_left = 580.0
offset_top = 392.0
offset_right = 620.0
offset_bottom = 432.0
script = ExtResource("5_sor5i")

[node name="VIssza" type="TextureButton" parent="."]
offset_left = -36.0
offset_top = -22.0
offset_right = 1884.0
offset_bottom = 1058.0
scale = Vector2(0.154127, 0.141558)
texture_normal = ExtResource("4_0ouk1")
texture_pressed = ExtResource("5_5eqrc")
texture_hover = ExtResource("5_5eqrc")
texture_focused = ExtResource("5_5eqrc")
script = ExtResource("5_sor5i")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_caugx")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_2jqnw")

[connection signal="mouse_entered" from="Hangok" to="Hangok" method="_on_mouse_entered"]
[connection signal="pressed" from="Hangok" to="Hangok" method="_on_pressed"]
[connection signal="mouse_entered" from="Nyelv" to="Hangok" method="_on_nyelv_mouse_entered"]
[connection signal="pressed" from="Nyelv" to="Hangok" method="_on_nyelv_pressed"]
[connection signal="mouse_entered" from="Stáblista" to="Hangok" method="_on_stáblista_mouse_entered"]
[connection signal="pressed" from="Stáblista" to="Hangok" method="_on_stáblista_pressed"]
[connection signal="mouse_entered" from="VIssza" to="Hangok" method="_on_v_issza_mouse_entered"]
[connection signal="pressed" from="VIssza" to="Hangok" method="_on_v_issza_pressed"]
